--- a/include/HTML/Parts/Page_Footer copy.htm
+++ b/include/HTML/Parts/Page_Footer copy.htm
@@ -3,9 +3,6 @@ R"rawliteral(
         <div class="columns mt-10">
           <span class="label label-rounded label-blank"></span> 
           <div class="columns mt-8">
-            <div class="columns mt-8">
-              <span class="label label-rounded label-error">%ReBootMessage%</span> 
-            </div>
             <div class="columns mt-4">
               <div class="col-12 text-center">
                 <span class="label label-rounded mr-2">%IDplaceholder%</span> 
@@ -16,7 +13,7 @@ R"rawliteral(
               </div>
             </div> 
             <div class="columns mt-8">
-              <span class="label label-rounded label-error">%ReBootReason%</span> 
+              <span class="label label-rounded label-error">%errorplaceholder%</span> 
             </div>
           </div>
         </div>
