--- a/include/HTML/Parts/Page_Footer.htm
+++ b/include/HTML/Parts/Page_Footer.htm
@@ -1,10 +1,9 @@
 R"rawliteral(
       <div id="footer">
         <div class="columns mt-10">
-          <span class="label label-rounded label-blank"></span> 
           <div class="columns mt-8">
             <div class="columns mt-8">
-              <span class="label label-rounded label-error">%ReBootMessage%</span> 
+              <span class="label label-rounded label-error">%WT_ReBootMessage%</span> 
             </div>
             <div class="columns mt-4">
               <div class="col-12 text-center">
@@ -16,7 +15,7 @@ R"rawliteral(
               </div>
             </div> 
             <div class="columns mt-8">
-              <span class="label label-rounded label-error">%ReBootReason%</span> 
+              <span class="label label-rounded label-error">%WT_ReBootReason%</span> 
             </div>
           </div>
         </div>
