--- a/include/HTML/Parts/NEW_Page_Header.htm
+++ b/include/HTML/Parts/NEW_Page_Header.htm
@@ -1,6 +1,6 @@
 R"rawliteral(
       <div id="header">
-        <h2>%title% - <em>Testing</em></h2>
+        <h2>%IDplaceholder% - <em>%WT_PageTitle%</em></h2>
         <div class = "menu-buttons">
           <div class = "button %WT_Button_0_Type%">
             <button0 onclick="location.href='%WT_Button_0_Address%'">%WT_Button_0_Label%</button>
