--- a/include/HTML/Management.htm
+++ b/include/HTML/Management.htm
@@ -2,7 +2,7 @@ R"rawliteral(
 <!DOCTYPE html5>
 <html>
   <head>
-    <title>%title% Management</title>
+    <title>%IDplaceholder% Management</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="data:,">
 
@@ -13,7 +13,7 @@ R"rawliteral(
     <div id="container">
 
       <div id="header">
-        <h2>%title% - <em>Management</em></h2>
+        <h2>%IDplaceholder% - <em>Management</em></h2>
         <div class = "menu-buttons">
           <div class = "button ButtonClickable">
            <button0 onclick="location.href='/test'">Test</button>
