--- a/include/HTML/homepage.htm
+++ b/include/HTML/homepage.htm
@@ -2,7 +2,7 @@ R"rawliteral(
 <!DOCTYPE html5>
 <html>
   <head>
-    <title>%title% Home</title>
+    <title>%IDplaceholder% Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="data:,">
     <meta http-equiv="expires" content="0">
@@ -15,7 +15,7 @@ R"rawliteral(
     <div id="container">
 
       <div id="header">
-        <h2>%title% - <em>Home</em></h2>
+        <h2>%IDplaceholder% - <em>Home</em></h2>
         <div class = "menu-buttons">
           <div class = "button ButtonClickable">
             <button0 onclick="location.href='/test'">Test</button>
