--- a/include/HTML/testpage.htm
+++ b/include/HTML/testpage.htm
@@ -2,7 +2,7 @@ R"rawliteral(
 <!DOCTYPE html5>
 <html>
   <head>
-    <title>%title% Testing</title>
+    <title>%IDplaceholder% Testing</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="data:,">
 
