--- a/include/HTML/Parts/NEW_Page_Header.htm
+++ b/include/HTML/Parts/NEW_Page_Header.htm
@@ -1,4 +1,4 @@
-R"rawliteral(
+// R"rawliteral(
       <div id="header">
         <h2>%IDplaceholder% - <em>%WT_PageTitle%</em></h2>
         <div class = "menu-buttons">
