--- a/include/HTML/homepage.htm
+++ b/include/HTML/homepage.htm
@@ -14,23 +14,7 @@ R"rawliteral(
   
     <div id="container">
 
-      <div id="header">
-        <h2>%IDplaceholder% - <em>Home</em></h2>
-        <div class = "menu-buttons">
-          <div class = "button ButtonClickable">
-            <button0 onclick="location.href='/test'">Test</button>
-          </div>
-          <div class = "button ButtonHere">
-            <Button1 onclick="location.href='/home'">Home</button>
-          </div>
-          <div class = "button ButtonClickable">
-            <Button2 onclick="location.href='/management'">Management</button>
-          </div>
-          <div class = "button ButtonClickable">
-           <button3 onclick="darkFunction()">Dark Mode</button3>
-          </div>
-        </div>
-      </div>  <!-- HEADER -->
+%PageHeader%
 
       <div id="body">
         %IPMAC%
