--- a/include/HTML/Management.htm
+++ b/include/HTML/Management.htm
@@ -2,7 +2,7 @@ R"rawliteral(
 <!DOCTYPE html5>
 <html>
   <head>
-    <title>%IDplaceholder% Management</title>
+    <title>%IDplaceholder% - %WT_PageTitle%</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="data:,">
 
