--- a/include/HTML/Parts/NEW HTML_SKELETON.htm
+++ b/include/HTML/Parts/NEW HTML_SKELETON.htm
@@ -1,32 +1,10 @@
 <!DOCTYPE html5>
 <html>
   <head>
-    <title>%IDplaceholder% Testing</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="data:,">
-
-    <link rel="stylesheet" href="TheCSS.css">
-%SCRIPTS%
-  </head>
-
-  <!DOCTYPE html5>
-<html>
-  <head>
-    <title>%IDplaceholder% Home</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="data:,">
-    <meta http-equiv="expires" content="0">
-
-    <link rel="stylesheet" href="TheCSS.css">
-%SCRIPTS%
-  </head>
-
-  <!DOCTYPE html5>
-<html>
-  <head>
     <title>%IDplaceholder% - %WT_PageTitle%</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="data:,">
+    <meta http-equiv="expires" content="0"> <!-- /home -->
 
     <link rel="stylesheet" href="TheCSS.css"> 
 %SCRIPTS%
@@ -36,7 +14,7 @@
     <body>
     <div id="container">
 %PageHeader%
-%PageBody%
+%PageBody% <!-- Different for each page -->
 %PageFooter%
     </div>
 
