--- a/include/HTML/Management.htm
+++ b/include/HTML/Management.htm
@@ -5,6 +5,7 @@ R"rawliteral(
     <title>%IDplaceholder% - %WT_PageTitle%</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="data:,">
+    <meta http-equiv="expires" content="0"> <!-- /home only? -->
 
     <link rel="stylesheet" href="TheCSS.css"> 
 %SCRIPTS%
