--- a/include/HTML/Parts/NEW HTML_SKELETON.htm
+++ b/include/HTML/Parts/NEW HTML_SKELETON.htm
@@ -4,12 +4,11 @@
     <title>%IDplaceholder% - %WT_PageTitle%</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="data:,">
-    <meta http-equiv="expires" content="0"> <!-- /home only? -->
+    <meta http-equiv="expires" content="0">
 
     <link rel="stylesheet" href="TheCSS.css"> 
 %SCRIPTS%
   </head>
-
 
     <body>
     <div id="container">
