--- a/include/HTML/homepage.htm
+++ b/include/HTML/homepage.htm
@@ -14,12 +14,9 @@ R"rawliteral(
   
     <div id="container">
 %PageHeader%
-      <div id="body">
-        %IPMAC%
-<br> 
-        %hPageContent%
-        %TemplateCount%
-      </div>  <!-- BODY -->
+
+%PageBody%
+
 %PageFooter%
     </div>
 
