--- a/include/HTML/Parts/Page_Header.htm
+++ b/include/HTML/Parts/Page_Header.htm
@@ -1,3 +1,4 @@
+const char *Page_Header PROGMEM =
 R"rawliteral(
       <div id="header">
         <h2>%IDplaceholder% - <em>%WT_PageTitle%</em></h2>
