--- a/include/HTML/Parts/Content_Management.htm
+++ b/include/HTML/Parts/Content_Management.htm
@@ -1,4 +1,4 @@
-const char *BODY_Management PROGMEM =
+const char *Content_Management PROGMEM =
 R"rawliteral(
      <div id="body">
        <div class="col-12 mt-3 p-centered">
