--- a/include/HTML/Parts/Content_Management.htm
+++ b/include/HTML/Parts/Content_Management.htm
@@ -1,5 +1,6 @@
 const char *Content_Management PROGMEM =
 R"rawliteral(
+<!-- Update -->
   <div class="col-12 mt-3 p-centered">
     <div class="col-3 col-sm-9 col-md-6 p-centered">
       <label class="label label2 mr-2">Upload Firmware Here</label>
@@ -18,7 +19,9 @@ R"rawliteral(
       </div>
     </div>
   </div>
+<!-- /Update -->
 
+<!-- Reboot -->
   <div class = "menu-buttons">
     <div class = "menu-reboot">
       <div class = "button ButtonClickable">
@@ -26,4 +29,5 @@ R"rawliteral(
       </div>
     </div>
   </div>
+<!-- /Reboot -->
 )rawliteral";
