--- a/include/HTML/Scripts.htm
+++ b/include/HTML/Scripts.htm
@@ -9,16 +9,7 @@ R"rawliteral(
        var xhr = new XMLHttpRequest();
        xhr.open("GET", "/darkmode?state=1", true);
        xhr.send();
-       setTimeout(function () {window.location.href = "/test";}, 100);
-      }
-   </script>
-
-    <script>
-      function darkFunction0() {
-       var xhr = new XMLHttpRequest();
-       xhr.open("GET", "/darkmode?state=1", true);
-       xhr.send();
-       setTimeout(function () {window.location.href = "";}, 100);
+       setTimeout(function () {window.location.href = "/";}, 100);
       }
    </script>
 )rawliteral";
