--- a/include/HTML/Management.htm
+++ b/include/HTML/Management.htm
@@ -1,4 +1,5 @@
-const char management_html[] PROGMEM = 
+// const char management_html[] PROGMEM = 
+const char management_html[] = 
 R"rawliteral(
 <!DOCTYPE html5>
 <html>
