--- a/include/HTML/Management.htm
+++ b/include/HTML/Management.htm
@@ -1,5 +1,4 @@
-// const char management_html[] PROGMEM = 
-const char management_html[] = 
+const char management_html[] PROGMEM = 
 R"rawliteral(
 <!DOCTYPE html5>
 <html>
