--- a/include/HTML/homepage.htm
+++ b/include/HTML/homepage.htm
@@ -9,7 +9,8 @@ R"rawliteral(
     <meta http-equiv="expires" content="0">
 
     <link rel="stylesheet" href="TheCSS.css">
-%SCRIPTS%
+    <link rel="stylesheet" href="scripts.htm">
+%_SCRIPTS_%
   </head>
   <body>
   
