--- a/include/HTML/homepage.htm
+++ b/include/HTML/homepage.htm
@@ -9,7 +9,7 @@ R"rawliteral(
     <meta http-equiv="expires" content="0">
 
     <link rel="stylesheet" href="TheCSS.css">
-    <link rel="stylesheet" href="scripts.htm">
+    <link href="scripts.htm">
 %_SCRIPTS_%
   </head>
   <body>
