--- a/include/HTML/homepage.htm
+++ b/include/HTML/homepage.htm
@@ -9,8 +9,7 @@ R"rawliteral(
     <meta http-equiv="expires" content="0">
 
     <link rel="stylesheet" href="TheCSS.css">
-    <link href="scripts.htm">
-%_SCRIPTS_%
+%SCRIPTS%
   </head>
   <body>
   
