--- a/include/HTML/Parts/Content_IP_MAC.htm
+++ b/include/HTML/Parts/Content_IP_MAC.htm
@@ -10,5 +10,6 @@ R"rawliteral(
         <span class="name-text">MAC Address:</name-text></span>
         <span class="host">%macplaceholder%</host></span>
     </div>
+  <b>Memory - Sketch Size: </b>%memsketch%<br>
 </div>
 )rawliteral";
