--- a/include/HTML/Parts/Content_IP_MAC.htm
+++ b/include/HTML/Parts/Content_IP_MAC.htm
@@ -10,6 +10,10 @@ R"rawliteral(
         <span class="name-text">MAC Address:</name-text></span>
         <span class="host">%macplaceholder%</host></span>
     </div>
-  <b>Memory - Sketch Size: </b>%memsketch%<br>
+
+    <div class="name-mac">
+        <span class="name-text">Sketch Size:</name-text></span>
+        <span class="host">%memsketch%</host></span>
+    </div>
 </div>
 )rawliteral";
