--- a/include/HTML/Parts/Content_Management.htm
+++ b/include/HTML/Parts/Content_Management.htm
@@ -25,7 +25,7 @@ R"rawliteral(
   <div class = "menu-buttons">
     <div class = "menu-reboot">
       <div class = "button ButtonClickable">
-        <button4 onclick="location.href='/reboot'">%processorplaceholder% Reboot</button4>
+        <button4 onclick="location.href='/reboot'">%processorpWT_Processorlaceholder% Reboot</button4>
       </div>
     </div>
   </div>
