--- a/include/HTML/Parts/Page_Header.htm
+++ b/include/HTML/Parts/Page_Header.htm
@@ -1,7 +1,7 @@
 const char *Page_Header PROGMEM =
 R"rawliteral(
       <div id="header">
-        <h2>%IDplaceholder% - <em>%WT_PageTitle%</em></h2>
+        <h2>%WT_DeviceID% - <em>%WT_PageTitle%</em></h2>
         <div class = "menu-buttons">
         %Buttons%
           <div class = "button ButtonClickable">
