--- a/include/HTML/homepage.htm
+++ b/include/HTML/homepage.htm
@@ -3,7 +3,7 @@ R"rawliteral(
 <!DOCTYPE html5>
 <html>
   <head>
-    <title>%IDplaceholder% - %WT_PageTitle%</title>
+    <title>%WT_DeviceID% - %WT_PageTitle%</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="data:,">
     <meta http-equiv="expires" content="0">
