--- a/include/HTML/Parts/Page_Footer.htm
+++ b/include/HTML/Parts/Page_Footer.htm
@@ -4,15 +4,15 @@ R"rawliteral(
         <div class="columns mt-10">
           <div class="columns mt-8">
             <div class="columns mt-8">
-              <span class="label label-rounded label-error">%WT_ReBootMessage%</span> 
+              <span class="label label-rounded label-error">%WT_ReBootMSG%</span> 
             </div>
             <div class="columns mt-4">
               <div class="col-12 text-center">
-                <span class="label label-rounded mr-2">%IDplaceholder%</span> 
+                <span class="label label-rounded mr-2">%WT_DeviceID%</span> 
                 -
-                <span class="label label-rounded label-primary ml-2">%processorplaceholder%</span>
+                <span class="label label-rounded label-primary ml-2">%WT_Processor%</span>
                 -
-                <span class="label label-rounded mr-2">%type%</span> 
+                <span class="label label-rounded mr-2">%WT_type%</span> 
               </div>
             </div> 
             <div class="columns mt-8">
