--- a/include/HTML/css.css
+++ b/include/HTML/css.css
@@ -30,7 +30,7 @@ body {
    html {font-family: Arial; display: inline-block; text-align: center;}
    h2 {
     font-size: 3.0rem;
-    color: %color%;
+    color: %WT_color%;
     margin-bottom: 0.4rem;
    }
    .menu-buttons{
@@ -57,12 +57,12 @@ body {
      cursor: pointer;
    }
    .ButtonHere {
-    background-color: %color%;
-    border-color: %hover%;
+    background-color: %WT_color%;
+    border-color: %WT_hover%;
     color: White;
    } 
    .ButtonClickable:hover {
-    background-color: %hover%;
+    background-color: %WT_hover%;
     color: white;
    }
   
@@ -78,19 +78,19 @@ body {
   .form-input {
     margin-bottom: 1rem;
     background-image: none;
-    border: 0.25rem dashed %hover%;
+    border: 0.25rem dashed %WT_hover%;
     border-radius: .4rem;
-    color: %color%;
+    color: %WT_color%;
     font-size: 1rem;
     padding:  .4rem;
    }
      
    input[type="submit"] {
-    background-color: %color%;
+    background-color: %WT_color%;
     color: white;
     font-size: 1.0rem;
     font-weight: bold;
-    border:  .25rem solid %color%;
+    border:  .25rem solid %WT_color%;
     border-radius: .4rem;
     padding:  .3rem .8rem;
     text-align: center;
@@ -102,7 +102,7 @@ body {
    input[type="submit"]:hover {
     background-color: #ffffff;
     border-color: #000000;
-    color: %color%;
+    color: %WT_color%;
     border: .25rem solid;
     border-radius: .4rem;
     font-weight: bold;
@@ -111,7 +111,7 @@ body {
    }
 
    .col-3{
-    border: 0.25rem solid %color%;
+    border: 0.25rem solid %WT_color%;
     border-radius: .4rem;
     width: 30rem;
     margin: auto;
@@ -119,7 +119,7 @@ body {
    }
    
    .col-4{
-    border: 0.25rem solid %color%;
+    border: 0.25rem solid %WT_color%;
     border-radius: .4rem;
     width: 30rem;
     margin-top: 2rem;
@@ -128,13 +128,13 @@ body {
    }
 
    .w3-background{
-    background-color: %hover%;
+    background-color: %WT_hover%;
     border-radius: .4rem;
    }
   
    .w3-progress{
     color: #ffffff;
-    background-color: %color%;
+    background-color: %WT_color%;
     border-radius: .4rem;
     text-align:center;
     padding: .6rem .6rem .6rem .6rem;
@@ -142,7 +142,7 @@ body {
 
    .upload-bar{
     background-image: none;
-    border: 0.25rem dashed %hover%;
+    border: 0.25rem dashed %WT_hover%;
     border-radius: .4rem;
     padding: 0.3rem 0.6rem 0.3rem 0.6rem;
     margin: auto;
@@ -156,7 +156,7 @@ body {
     font-size: 1.0rem;;
    }
    .label.label-primary {
-    background: %color%;
+    background: %WT_color%;
     color: #fff;
     margin-left: .5rem;
     margin-right: .5rem;
@@ -174,7 +174,7 @@ body {
     }
    
    .label.label-error {
-    background: %color%;
+    background: %WT_color%;
     color: #fff;
     padding-left: 10rem;
     padding-right: 10rem;
@@ -185,7 +185,7 @@ body {
     }
     
    .label.label-blank {
-    background: %color%;
+    background: %WT_color%;
     color: #fff;
     padding-left: 10rem;
     padding-right: 10rem;
