--- a/include/HTML/Parts/Content_IP_MAC.htm
+++ b/include/HTML/Parts/Content_IP_MAC.htm
@@ -3,12 +3,12 @@ R"rawliteral(
 <div class="menu-reboot">
     <div class="name-host">
         <span class="name-text">IP Address:</name-text></span>
-        <span class="host">%ipplaceholder%</host></span>
+        <span class="host">%WT_IP%</host></span>
     </div>
 
     <div class="name-mac">
         <span class="name-text">MAC Address:</name-text></span>
-        <span class="host">%macplaceholder%</host></span>
+        <span class="host">%WT_MAC%</host></span>
     </div>
 
     <div class="name-mac">
