--- a/include/HTML/Scripts.htm
+++ b/include/HTML/Scripts.htm
@@ -41,7 +41,7 @@ R"rawliteral(
              var prg1 = document.getElementById('prg1');
 
              prg1.style.width  = per1 + "rem"
-             prg.innerHTML     = per + "%"
+             prg.innerHTML     = per + "%%"
             }
           }, false);
           xhr.open('POST', location.href, true);
