--- a/include/HTML/failedOTA.htm
+++ b/include/HTML/failedOTA.htm
@@ -15,6 +15,7 @@ R"rawliteral(
 %PageHeader%
       <div id="body">       
         <h2 align=center>Oh No!!!  It Borked!!!  What'd ya try to do?</h2>
+        (Gimme a moment or three & hit the "Home" button to go back to the existing firmware...)
       </div>  <!-- BODY -->
 
 %PageFooter%
