--- a/include/HTML/Parts/Content_IP_MAC.htm
+++ b/include/HTML/Parts/Content_IP_MAC.htm
@@ -11,7 +11,7 @@ R"rawliteral(
         <span class="host">%WT_MAC%</host></span>
     </div>
 
-    <div class="name-mac">
+    <div class="name-mem">
         <span class="name-text">Sketch Size:</name-text></span>
         <span class="host">%memsketch%</host></span>
     </div>
