--- a/include/HTML/Parts/Content_Management.htm
+++ b/include/HTML/Parts/Content_Management.htm
@@ -2,13 +2,5 @@ const char *Content_Management PROGMEM =
 R"rawliteral(
 %WT_Update%
 %WT_IPMAC%
-<!-- Reboot -->
-  <div class = "menu-buttons">
-    <div class = "menu-reboot">
-      <div class = "button ButtonClickable">
-        <button4 onclick="location.href='/reboot'">%processorpWT_Processorlaceholder% Reboot</button4>
-      </div>
-    </div>
-  </div>
-<!-- /Reboot -->
+%WT_Reboot%
 )rawliteral";
