--- a/include/HTML/Management.htm
+++ b/include/HTML/Management.htm
@@ -6,9 +6,9 @@ R"rawliteral(
     <title>%WT_DeviceID% - %WT_PageTitle%</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="data:,">
-    <meta http-equiv="expires" content="0"> <!-- /home only? -->
+    <meta http-equiv="expires" content="0">
 
-    <link rel="stylesheet" href="TheCSS.css"> 
+    <link rel="stylesheet" href="TheCSS.css">
 %SCRIPTS%
   </head>
   <body>
