--- a/include/HTML/Parts/NEW_HTML_SKELETON.htm
+++ b/include/HTML/Parts/NEW_HTML_SKELETON.htm
@@ -1,3 +1,5 @@
+const char *Skeleton PROGMEM =
+R"rawliteral(
 <!DOCTYPE html5>
 <html>
   <head>
@@ -19,3 +21,4 @@
 
   </body>
 </html>
+)rawliteral";
