--- a/include/HTML/Parts/NEW_HTML_SKELETON.htm
+++ b/include/HTML/Parts/NEW_HTML_SKELETON.htm
@@ -7,7 +7,7 @@ R"rawliteral(
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="data:,">
     <meta http-equiv="expires" content="0">
-
+%WT_Refresh%
     <link rel="stylesheet" href="TheCSS.css"> 
 %SCRIPTS%
   </head>
