--- a/include/HTML/css.css
+++ b/include/HTML/css.css
@@ -2,220 +2,192 @@ const char TheCSS[] PROGMEM =
 R"rawliteral(
 
 body {
-   margin: 0;
-   padding: 0;
+   margin:0;
+   padding:0;
+   height:100%%;
 }
-
 #container {
-   position: relative;
-   height: 100%;
-   display: flex;
-   flex-direction: column;
-   justify-content: space-between;
+   min-height:100%%;
+   position:relative;
 }
-
 #header {
-   padding: 00px;
-}
 
+   padding:00px;
+}
 #body {
-   position: relative;
-   height: 100%;
-   padding: 100px;
+   padding:10px;
+   padding-bottom:100px;   /* Height of the footer */
 }
-
 #footer {
-   height: 100px;
-   /* Height of the footer */
-   box-sizing: border-box;
-   position: relative;
-   bottom: 25px;
-   width: 100%;
+   position:absolute;
+   bottom:0;
+   width:100%%;
+   height:100px;   /* Height of the footer */
+
 }
 
-html {
-   font-family: Arial;
-   display: inline-block;
-   text-align: center;
-}
+   html {font-family: Arial; display: inline-block; text-align: center;}
+   h2 {
+    font-size: 3.0rem;
+    color: %WT_color%;
+    margin-bottom: 0.4rem;
+   }
+   .menu-buttons{
+     margin-top: 1.0rem;
+     margin-bottom: 1.0rem;
+   }
+   .menu-reboot{
+    border: 0.25rem solid #005500;
+    border-radius: .4rem;
+    width: 30rem;
+    margin: auto;
+    padding:  .4rem;
+   }     
+   .button {
+     border: .15rem solid;
+     border-radius: .4rem;
+     font-weight: bold;
+     padding: .25rem .6rem;;
+     text-align: center;
+     text-decoration: none;
+     display: inline-block;
+     font-size: 1.0rem;
+     margin: .5rem .5rem .5rem .5rem;;
+     cursor: pointer;
+   }
+   .ButtonHere {
+    background-color: %WT_color%;
+    border-color: %WT_hover%;
+    color: White;
+   } 
+   .ButtonClickable:hover {
+    background-color: %WT_hover%;
+    color: white;
+   }
+  
+   .label2{
+    font-weight: bold;
+    line-height: 1.2rem;
+    min-height: 1.4rem;
+    padding: .1rem .4rem .1rem 1.2rem;
+    position: center;
+    font-size: 1.25rem;
+   }
+  .pt-2 {padding-top: .75rem;}
+  .form-input {
+    margin-bottom: 1rem;
+    background-image: none;
+    border: 0.25rem dashed %WT_hover%;
+    border-radius: .4rem;
+    color: %WT_color%;
+    font-size: 1rem;
+    padding:  .4rem;
+   }
+     
+   input[type="submit"] {
+    background-color: %WT_color%;
+    color: white;
+    font-size: 1.0rem;
+    font-weight: bold;
+    border:  .25rem solid %WT_color%;
+    border-radius: .4rem;
+    padding:  .3rem .8rem;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: .9rem .45rem .4rem .4rem;
+    cursor: pointer;
+   }
+   input[type="submit"]:hover {
+    background-color: #ffffff;
+    border-color: #000000;
+    color: %WT_color%;
+    border: .25rem solid;
+    border-radius: .4rem;
+    font-weight: bold;
+    font-size: 1.0rem;
+    cursor: pointer;
+   }
 
-h2 {
-   font-size: 3.0rem;
-   color: #005500;
-   margin-bottom: 0.4rem;
-}
+   .col-3{
+    border: 0.25rem solid %WT_color%;
+    border-radius: .4rem;
+    width: 30rem;
+    margin: auto;
+    padding:  .4rem;
+   }
+   
+   .col-4{
+    border: 0.25rem solid %WT_color%;
+    border-radius: .4rem;
+    width: 30rem;
+    margin-top: 2rem;
+    margin: auto;
+    padding:  .4rem;
+   }
 
-.menu-buttons {
-   margin-top: 1.0rem;
-   margin-bottom: 1.0rem;
-}
+   .w3-background{
+    background-color: %WT_hover%;
+    border-radius: .4rem;
+   }
+  
+   .w3-progress{
+    color: #ffffff;
+    background-color: %WT_color%;
+    border-radius: .4rem;
+    text-align:center;
+    padding: .6rem .6rem .6rem .6rem;
+   }
 
-.menu-reboot {
-   border: 0.25rem solid #005500;
-   border-radius: .4rem;
-   width: 30rem;
-   margin: auto;
-   padding: .4rem;
-}
+   .upload-bar{
+    background-image: none;
+    border: 0.25rem dashed %WT_hover%;
+    border-radius: .4rem;
+    padding: 0.3rem 0.6rem 0.3rem 0.6rem;
+    margin: auto;
+    width: 26rem;
+   }
 
-.button {
-   border: .15rem solid;
-   border-radius: .4rem;
-   font-weight: bold;
-   padding: .25rem .6rem;
-   ;
-   text-align: center;
-   text-decoration: none;
-   display: inline-block;
-   font-size: 1.0rem;
-   margin: .5rem .5rem .5rem .5rem;
-   ;
-   cursor: pointer;
-}
+   .mt-4 {
+    margin-top: 0.15rem;
+   }
+   .label {
+    font-size: 1.0rem;;
+   }
+   .label.label-primary {
+    background: %WT_color%;
+    color: #fff;
+    margin-left: .5rem;
+    margin-right: .5rem;
+    font-size: 1.0rem;
+   }
+   .label.label-rounded {
+    border-radius: 5rem;
+    padding-left: .5rem;
+    padding-right: .5rem;
+    font-size: 1.0rem;
+   }
 
-.ButtonHere {
-   background-color: #005500;
-   border-color: #00aa00;
-   color: White;
-}
-
-.ButtonClickable:hover {
-   background-color: #00aa00;
-   color: white;
-}
-
-.label2 {
-   font-weight: bold;
-   line-height: 1.2rem;
-   min-height: 1.4rem;
-   padding: .1rem .4rem .1rem 1.2rem;
-   position: center;
-   font-size: 1.25rem;
-}
-
-.pt-2 {
-   padding-top: .75rem;
-}
-
-.form-input {
-   margin-bottom: 1rem;
-   background-image: none;
-   border: 0.25rem dashed #00aa00;
-   border-radius: .4rem;
-   color: #005500;
-   font-size: 1rem;
-   padding: .4rem;
-}
-
-input[type="submit"] {
-   background-color: #005500;
-   color: white;
-   font-size: 1.0rem;
-   font-weight: bold;
-   border: .25rem solid #005500;
-   border-radius: .4rem;
-   padding: .3rem .8rem;
-   text-align: center;
-   text-decoration: none;
-   display: inline-block;
-   margin: .9rem .45rem .4rem .4rem;
-   cursor: pointer;
-}
-
-input[type="submit"]:hover {
-   background-color: #ffffff;
-   border-color: #000000;
-   color: #005500;
-   border: .25rem solid;
-   border-radius: .4rem;
-   font-weight: bold;
-   font-size: 1.0rem;
-   cursor: pointer;
-}
-
-.col-3 {
-   border: 0.25rem solid #005500;
-   border-radius: .4rem;
-   width: 30rem;
-   margin: auto;
-   padding: .4rem;
-}
-
-.col-4 {
-   border: 0.25rem solid #005500;
-   border-radius: .4rem;
-   width: 30rem;
-   margin-top: 2rem;
-   margin: auto;
-   padding: .4rem;
-}
-
-.w3-background {
-   background-color: #00aa00;
-   border-radius: .4rem;
-}
-
-.w3-progress {
-   color: #ffffff;
-   background-color: #005500;
-   border-radius: .4rem;
-   text-align: center;
-   padding: .6rem .6rem .6rem .6rem;
-}
-
-.upload-bar {
-   background-image: none;
-   border: 0.25rem dashed #00aa00;
-   border-radius: .4rem;
-   padding: 0.3rem 0.6rem 0.3rem 0.6rem;
-   margin: auto;
-   width: 26rem;
-}
-
-.mt-4 {
-   margin-top: 0.15rem;
-}
-
-.label {
-   font-size: 1.0rem;
-   ;
-}
-
-.label.label-primary {
-   background: #005500;
-   color: #fff;
-   margin-left: .5rem;
-   margin-right: .5rem;
-   font-size: 1.0rem;
-}
-
-.label.label-rounded {
-   border-radius: 5rem;
-   padding-left: .5rem;
-   padding-right: .5rem;
-   font-size: 1.0rem;
-}
-
-.mt-8 {
-   margin-top: 5px;
-}
-
-.label.label-error {
-   background: #005500;
-   color: #fff;
-   padding-left: 10rem;
-   padding-right: 10rem;
-}
-
-.mt-10 {
-   margin-top: 5px;
-}
-
-.label.label-blank {
-   background: #005500;
-   color: #fff;
-   padding-left: 10rem;
-   padding-right: 10rem;
-}
+    .mt-8 {
+    margin-top: 5px;
+    }
+   
+   .label.label-error {
+    background: %WT_color%;
+    color: #fff;
+    padding-left: 10rem;
+    padding-right: 10rem;
+   }
+   
+   .mt-10 {
+    margin-top: 5px;
+    }
+    
+   .label.label-blank {
+    background: %WT_color%;
+    color: #fff;
+    padding-left: 10rem;
+    padding-right: 10rem;
+   }
 
   )rawliteral";
