Replaced CSS load tag with template tag

--- a/include/HTML/failedOTA.htm
+++ b/include/HTML/failedOTA.htm
@@ -7,7 +7,7 @@ R"rawliteral(
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="data:,">
 
-    <link rel="stylesheet" href="TheCSS.css"> 
+%CSS%
 %SCRIPTS%
   </head>
 
