--- a/include/HTML/reboot.htm
+++ b/include/HTML/reboot.htm
@@ -8,7 +8,7 @@ R"rawliteral(
     <link rel="icon" href="data:,">
     <meta http-equiv="refresh" content="5; URL='/'" />
 
-    <link rel="stylesheet" href="TheCSS.css">
+%CSS%
 %SCRIPTS%
   </head>
   <div id="container">
