--- a/include/HTML/Parts/NEW_HTML_SKELETON.htm
+++ b/include/HTML/Parts/NEW_HTML_SKELETON.htm
@@ -8,7 +8,7 @@ R"rawliteral(
     <link rel="icon" href="data:,">
     <meta http-equiv="expires" content="0">
 %WT_Refresh%
-    <link rel="stylesheet" href="TheCSS.css"> 
+%CSS%
 %SCRIPTS%
   </head>
 
